# market-analysis-app

./: .gitignore  AGENT_FULL_CONTROL_PLAN.md  ALGORITHMS_RECOMMENDATIONS.md  FEATURES.md  IMPROVEMENT_IDEAS.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_backend.sh
.github/workflows/: main.yml
backend/: Dockerfile  agent_runner.py  backtest_runner.py  config.py  db.py  main.py  requirements.txt  test_ensemble_fix.py
backend/agents/: __init__.py  llm_manager.py  lstm_predictor.py  models.py  technical_analyst.py  trade_orchestrator.py  xgboost_analyst.py
backend/algorithms/: __init__.py  arima.py  base.py  elastic_net.py  ensemble.py  features.py  gradient_boosting.py  knn_algo.py  lightgbm_algo.py  linear_regression.py  lstm.py  markov_chains.py  moving_average.py  random_forest.py  svm_algo.py  xgboost_algo.py
backend/data/: companies.json  newspapers.json  normal_symbols.json  volatile_symbols.json  volatile_universe.json
backend/marketenv/: pyvenv.cfg
backend/routes/: __init__.py  agent.py  algorithms.py  articles.py  backtest.py  company.py  portfolio.py  watchlist.py
backend/services/: article_service.py  company_service.py  macro_fetcher.py  news_fetcher.py  telegram_commands.py  telegram_notify.py  volatility_scanner.py
backend/tests/: test_watchlist.py
backend/utils/: data_handler.py  imports.py  logger.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx
frontend/src/components/: AlgorithmTutorials.css  (+18 more)
